--- a/src/components/telas-funcionario/CadastroModal.css
+++ b/src/components/telas-funcionario/CadastroModal.css
@@ -4,7 +4,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.75); /* Fundo escuro semi-transparente */
+    background-color: rgba(0, 0, 0, 0.75);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,7 +13,7 @@
 
 .cadastroModal-content {
     background-color: #fff;
-    padding: 60px;
+    padding: 40px;
     border-radius: 8px;
     width: 100vh;
     max-width: 90%;
@@ -21,8 +21,6 @@
     z-index: 1001;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -32,16 +30,52 @@
     margin-bottom: 20px;
 }
 
-.cadastroModal-body {
-    width: 100%;
-}
-
 .cadastroModal-input {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 4px;
     border: 1px solid #ccc;
+}
+
+.cadastroModal-input-select {
+    width: 102%;
+    margin-bottom: 10px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+}
+
+.cadastroModal-spinner-icon {
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
+.cadastroModal-sucess-message {
+    color: #28a745;
+    background-color: #d4edda;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.cadastroModal-error-message {
+    color: #dc3545;
+    background-color: #f8d7da;
+    padding: 10px;
+    border-radius: 5px;
+    margin-top: 10px;
+    text-align: center;
+}
+
+.cadastroModal-btn-container {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
 }
 
 .cadastroModal-btn {
@@ -59,12 +93,70 @@
     background-color: #086f79;
 }
 
-.cadastroModal-close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background-color: transparent;
+.cadastroModal-btn-voltar {
+    padding: 10px 20px;
+    background-color: #0a93a1;
+    color: #fff;
     border: none;
-    font-size: 18px;
+    border-radius: 4px;
     cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+    margin-top: 10px;
+}
+
+.cadastroModal-btn-proximo {
+    padding: 10px 20px;
+    background-color: #fff;
+    color: #000000;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.cadastroModal-btn-proximo:hover {
+    color: #086f79;
+}
+
+.cadastroModal-btn-relacionar {
+    padding: 10px 20px;
+    background-color: #fff;
+    color: #000000;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.cadastroModal-btn-relacionar:hover {
+    color: #15cc0f;
+}
+
+.cadastroModal-steps {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.cadastroModal-step {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.cadastroModal-step-icon {
+    margin-right: 5px;
+    font-size: 20px; /* Ajuste o tamanho conforme necessário */
+}
+
+.cadastroModal-step.active .cadastroModal-step-icon {
+    color: #0a93a1; /* Cor do ícone ativo */
+}
+
+.espaco-para-baixo {
+    margin-bottom: 20px;
+}
+
+.direita {
+    display: flex;
+    justify-content: end;
 }
