--- a/src/components/telas-funcionario/DoadorDetalhesModal.css
+++ b/src/components/telas-funcionario/DoadorDetalhesModal.css
@@ -15,7 +15,7 @@
     background: white;
     padding: 20px;
     border-radius: 8px;
-    max-width: 500px;
+    max-width: 700px;
     width: 100%;
 }
 
@@ -26,3 +26,14 @@
 .doadorDetalhes-content button {
     margin-top: 20px;
 }
+
+.doadorDetalhesModal-fechar:hover {
+    color: red;
+    cursor: pointer;
+}
+
+.doadorDetalhesModal-input {
+    width: 97%;
+    margin-bottom: 10px;
+}
+
