--- a/src/pages/telas-funcionario/AtendimentosIniciados.css
+++ b/src/pages/telas-funcionario/AtendimentosIniciados.css
@@ -10,6 +10,54 @@
     padding: 0;
     margin: 0;
 }
+.atendimentosIniciados-filtros {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.atendimentosIniciados-filtro-tipo  {   
+    width: 33%; 
+    margin: auto;
+}
+.atendimentosIniciados-filtro-status  {   
+    width: 33%; 
+    margin: auto;
+
+}
+
+.atendimentosIniciados-pesquisa {
+    width: 33%;
+    margin: auto;
+
+}
+
+.atendimentosIniciados-filtro-tipo select {
+    padding: 4px;
+    height: 5vh;
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-right: 10spx;
+}
+.atendimentosIniciados-filtro-status select {
+    padding: 4px;
+    height: 5vh;
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-right: 10px;
+}
+
+.atendimentosIniciados-pesquisa input{
+    padding: 4px;
+    height: 4vh;
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-right: 10px;
+}
 
 .atendimentosIniciados-item {
     display: flex;
@@ -66,6 +114,11 @@
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s;
+}
+
+.atendimentosIniciados-verificarCpf button[disabled]{
+    background-color: #ddd;
+    cursor: not-allowed;
 }
 
 .atendimentosIniciados-verificarCpf button:hover {
