--- a/src/pages/telas-funcionario/Entrevista.css
+++ b/src/pages/telas-funcionario/Entrevista.css
@@ -10,6 +10,12 @@
     margin-bottom: 20px;
 }
 
+.entrevista-subtitle {
+    font-size: 20px;
+    color: #3d3d3d;
+    margin-bottom: 20px;
+}
+
 /* Lista de senhas */
 .entrevista-list {
     list-style: none;
