--- a/src/pages/telas-funcionario/Recepcao.css
+++ b/src/pages/telas-funcionario/Recepcao.css
@@ -14,6 +14,15 @@
     margin-bottom: 20px;
 }
 
+/* SUb Título da página */
+.recepcao-subtitle {
+   
+    font-size: 20px;
+    color: #3d3d3d;
+    margin-bottom: 20px;
+}
+
+
 /* Lista de senhas */
 .recepcao-senha-list {
     list-style: none;
