--- a/src/components/telas-funcionario/ExameLaboratorioModal.css
+++ b/src/components/telas-funcionario/ExameLaboratorioModal.css
@@ -1,4 +1,3 @@
-
 /* ExameLaboratorioModal.css */
 .exameModal-container {
     position: fixed;
@@ -15,10 +14,91 @@
 .exameModal-content {
     background-color: #fff;
     padding: 20px;
-    width: 500px;
+    width: 800px; /* Aumentado para dar mais espaço horizontal */
     max-height: 90vh;
     overflow-y: auto;
     border-radius: 8px;
     display: flex;
     flex-direction: column;
+}
+
+.exameModal-groups {
+    display: flex;
+    gap: 20px;
+}
+
+.exameModal-group {
+    flex: 1;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 15px;
+}
+
+.exameModal-group h3 {
+    margin-top: 0;
+    font-size: 18px;
+    color: #333;
+    font-weight: bold;
+}
+
+.exameModal-input-group, .exameModal-test-group {
+    margin-bottom: 15px;
+}
+
+.exameModal-input-group label, .exameModal-test-group label {
+    font-weight: bold;
+    margin-bottom: 5px;
+    display: block;
+}
+
+.exameModal-input-group input, .exameModal-test-group select, .exameModal-input-group textarea {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
+textarea {
+    resize: vertical;
+}
+
+.exameModal-button-group {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.exameModal-save-button {
+    background-color: #0a93a1;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.exameModal-cancel-button {
+    background-color: #dc3545;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.exameModal-clear-button {
+    background-color: #6c757d;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.exameModal-save-button:hover, .exameModal-cancel-button:hover, .exameModal-clear-button:hover {
+    opacity: 0.9;
 }
