--- a/src/pages/dashboard/Dashboard.css
+++ b/src/pages/dashboard/Dashboard.css
@@ -1,11 +1,13 @@
 .ADM-dashboard-content {
     padding: 40px;
+    margin-left: 100px;
 }
 
 .ADM-dashboard-content h1 {
     font-size: 2.5em;
     margin-bottom: 20px;
     color: #2c3e50;
+    
 }
   
 .ADM-dashboard-metrics {
