--- a/src/pages/telas-funcionario/EstoquePendentes.css
+++ b/src/pages/telas-funcionario/EstoquePendentes.css
@@ -6,6 +6,11 @@
     background-color: #f8f9fa;
     border-radius: 8px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    flex-direction: column;
+    justify-content: center; /* Centraliza verticalmente */
+    align-items: center; /* Centraliza horizontalmente */
+    text-align: center;
+
 }
 
 /* Título principal da página */
@@ -109,4 +114,52 @@
 
 .confirmation-modal .modal-btn-cancel:hover {
     background-color: #d32f2f;
+}
+
+
+/* Exibição de imagem */
+.estoquePendentes-image-container {
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    padding: 10px;
+    max-width: 300px;
+    max-height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.estoquePendentes-image {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+}
+
+/* Estilo para o scanner */
+.estoquePendentes-scan, .estoquePendentes-upload {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px; /* Espaçamento entre os elementos */
+}
+
+/* Estilo do input de upload */
+.estoquePendentes-upload input[type="file"] {
+    display: none; /* Esconde o input padrão */
+}
+
+/* Botão estilizado para upload */
+.custom-file-upload {
+    background-color: #0a93a1;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.custom-file-upload:hover {
+    background-color: #087d87;
 }
