--- a/src/components/SobreAppSection.css
+++ b/src/components/SobreAppSection.css
@@ -1,6 +1,5 @@
 .sobre-section{
-    background: rgb(237,28,36);
-background: linear-gradient(180deg, rgba(237,28,36,1) 0%, rgba(227,185,186,1) 66%, rgba(255,255,255,1) 100%);
+    background: #60a9be;
     position: relative;
     min-height: 100vh;
     display: flex;
@@ -9,10 +8,9 @@ background: linear-gradient(180deg, rgba(237,28,36,1) 0%, rgba(227,185,186,1) 66
 
 .sobre-section #wave{
     width: 100%;
-    height: 242px;
-    top: -242px;
+    height: 220px;
+    top: -220px;
     position: absolute;
-    object-fit: cover;
 }
 .sobre-section h1{
     color: #FFF;
@@ -35,7 +33,7 @@ background: linear-gradient(180deg, rgba(237,28,36,1) 0%, rgba(227,185,186,1) 66
 }
 .sobre-section .sideImg img{
     flex: 0.6;
-    filter: drop-shadow(0 0 0.75rem #ed1c34);
+    filter: drop-shadow(0 0 0.75rem #6ca8e0);
 }
 .sobre-section .cardSection{
     align-self: stretch;
