--- a/src/pages/usuarios/Usuarios.css
+++ b/src/pages/usuarios/Usuarios.css
@@ -38,39 +38,32 @@
 }
 .usuarios-content thead tr{
   display: flex;
-  background-color: #b2d8e9;
+  background-color: #2d3e50;
   border-top-right-radius: 10px;
 }
 .usuarios-content th{
   flex: 1;
-  color: #222;
+  color: #FFF;
   position: relative;
-}
-.usuarios-content th:not(:nth-child(1))::before{
-  content: "";
-  display: block;
-  position: absolute;
-  left: -1px;
-  top: 0;
-  height: 100%;
-  width: 2px;
-  background-color: #2c3e50;
 }
 .usuarios-content tr:has(td){
   display: flex;
   background-color: #FFF;
   transition: .3s;
 }
-.usuarios-content tr:nth-child(even) {
-  background:#DDD;
-}
-.usuarios-content tr:has(td):hover{
-  background-color: #189bbc33;
-}
 .usuarios-content td {
   flex: 1;
-  border: 1px solid #222;
   border-top: none;
+  display: flex;
+}
+.usuarios-content #tipoSangue{
+  max-width: 154px;
+}
+.usuarios-content #acoes{
+  max-width: 122px;
+}
+.usuarios-content #notificacao{
+  max-width: 42px;
 }
 .usuarios-content tbody{
   max-height: 100%;
@@ -138,7 +131,7 @@
   }
   
   .tipo-sanguineo-dropdown,
-  .pesquisaCampo input {
+  .pesquisaCampo #pesquisa {
     padding: 0.5rem;
     font-size: 1rem;
     border: 1px solid #ccc;
@@ -188,6 +181,12 @@
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+  }
+  
+  .checkbox-notification{
+    width: 32px;
+    height: 32px;
+    align-self: center;
   }
   
   .notificacao-button:disabled {
