--- a/src/components/telas-funcionario/RelatorioColetaModal.css
+++ b/src/components/telas-funcionario/RelatorioColetaModal.css
@@ -71,3 +71,32 @@
 .cancelar-btn:hover {
     background-color: #d32f2f;
 }
+
+.qr-code-preview {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px; /* Espaço entre elementos */
+}
+
+.qr-code-actions {
+    display: flex;
+    justify-content: center;
+    gap: 10px; /* Espaço entre os botões */
+    margin-top: 10px;
+}
+
+.icon-button {
+    background-color: #f0f0f0;
+    border: 1px solid #dcdcdc;
+    border-radius: 50%;
+    padding: 8px;
+    cursor: pointer;
+    color: #0a93a1;
+    transition: background-color 0.3s, transform 0.2s;
+}
+
+.icon-button:hover {
+    background-color: #e0f7f8;
+    transform: scale(1.1);
+}
