--- a/src/pages/telas-funcionario/ExamesPendentes.css
+++ b/src/pages/telas-funcionario/ExamesPendentes.css
@@ -52,31 +52,26 @@
     display: none;
 }
 
-/* Estilo para o botão estilizado */
 .custom-file-upload {
     display: inline-block;
-    padding: 10px 20px;
-    font-size: 16px;
-    color: white;
     background-color: #0a93a1;
-    border: none;
-    border-radius: 5px;
+    color: white;
+    font-size: 16px;
+    padding: 10px 20px;
     cursor: pointer;
-    text-align: center;
+    border-radius: 5px;
     transition: background-color 0.3s ease;
+    text-align: center;
 }
 
-/* Hover do botão */
 .custom-file-upload:hover {
-    background-color: #087d87;
+    background-color: #087b86;
 }
 
-/* Texto ao lado do botão */
 .upload-text {
+    margin-top: 10px;
     font-size: 14px;
     color: #555;
-    font-weight: 500;
-    margin-top: 5px;
 }
 
 .examesPendentes-scan {
