--- a/src/pages/pendencias/Pendencias.css
+++ b/src/pages/pendencias/Pendencias.css
@@ -11,6 +11,10 @@
     align-items: center;
     margin-bottom: 10px;
 }
+.pendencias-header h1{
+    margin: 0;
+    color: #000;
+}
 .pendencias-header h2{
     margin: 0;
     color: #000;
