--- a/src/pages/HemocentroInformacoes.css
+++ b/src/pages/HemocentroInformacoes.css
@@ -1,23 +1,88 @@
 .hemocentro-page {
-    max-width: 900px;
+    width: 80%;
     margin: 20px auto;
     padding: 20px;
     background-color: #f4f4f9;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
+
+  .hemocentro-container {
+    background: #fff;
+    border-radius: 10px;
+
+    display: flex;
+    gap: 20px;
+    align-items: center;
+
+  }
   
+  .hemocentro-column {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+
+  .hemocentro-photo-section {
+    text-align: center;
+    background: #fff;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    position: relative;
+  }
+  
+  .hemocentro-photo {
+    width: 300px; /* Tamanho maior */
+    height: 300px;
+    object-fit: cover;
+    margin-bottom: 10px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+  }
+
+.edit-photo-button {
+    position: absolute;
+    top: 10px; /* Botão no canto superior */
+    right: 10px;
+    background: #0a93a1;
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: background 0.3s;
+  }
+  
+  .edit-photo-button:hover {
+    background: #086f7a;
+  }
+  
+  .edit-photo-button svg {
+    font-size: 20px;
+  }
+
+  .photo-upload {
+    margin-top: 10px;
+  }
+  
+ 
   .hemocentro-page h1 {
     text-align: center;
     color: #333;
   }
 
   .hemocentro-section {
-    margin-bottom: 20px;
-    padding: 15px;
     background: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 25px;
   }
   
   .hemocentro-section h2 {
@@ -69,3 +134,6 @@
     color: red;
     font-size: 14px;
   }
+
+
+
